@@ -1,5 +1,6 @@
 0.02
  - Add Tickit::Widget::Figlet 0.002 version.
+ - Update Module::Install to 1.15 version.
  - Update Tickit::Widget::Tabbed to 0.18 version.
 
 0.01 2015-02-12T19:29:24+01:00
